--- a/styles.css
+++ b/styles.css
@@ -100,3 +100,7 @@ body {
 .navButton:focus {
   background-color: #1f1e1e;
 }
+#peopleInSpace {
+    color: white !important;
+    text-align: right;
+}
