--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Audiowide&display=swap");
 
 body {    
-    background-image: url(src/space.png);
+    background-image: url(space.png);
 }
 
 .container {
