Added new tab for viewing upcoming launches via API

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Audiowide&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600");
 
-body {    
+body {
     background-image: url(space.png);
 }
 
@@ -34,7 +35,7 @@ body {
     color: rgb(248, 248, 248);
     display: flex;
     margin: 0;
-    text-decoration:underline;
+    text-decoration: underline;
 }
 
 .tabs span {
@@ -45,7 +46,7 @@ body {
 
 .tabs span:hover {
     background: rgb(0, 0, 0);
-    cursor:pointer;
+    cursor: pointer;
     color: rgb(4, 69, 248);
 }
 
@@ -58,49 +59,80 @@ body {
     text-decoration: underline;
     display: grid;
 }
+
 .disclosure {
     color: white;
     text-align: center;
     word-wrap: break-word;
 }
+
 .feed-title {
     color: blueviolet;
     font-size: x-large;
     width: fit-content;
-    
+
 }
+
 .navButton {
-  background-color: #000000;
-  border-radius: 8px;
-  border-style: none;
-  box-sizing: border-box;
-  color: #FFFFFF;
-  cursor: pointer;
-  display: inline-block;
-  font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  font-weight: 500;
-  height: 40px;
-  line-height: 20px;
-  list-style: none;
-  margin: 0;
-  outline: none;
-  padding: 10px 16px;
-  position: relative;
-  text-align: center;
-  text-decoration: none;
-  transition: color 100ms;
-  vertical-align: baseline;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
+    background-color: #000000;
+    border-radius: 8px;
+    border-style: none;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: inline-block;
+    font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    height: 40px;
+    line-height: 20px;
+    list-style: none;
+    margin: 0;
+    outline: none;
+    padding: 10px 16px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    transition: color 100ms;
+    vertical-align: baseline;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
 }
 
 .navButton:hover,
 .navButton:focus {
-  background-color: #1f1e1e;
+    background-color: #1f1e1e;
 }
+
 #peopleInSpace {
     color: white !important;
     text-align: right;
 }
+table {
+    background: #ffffff;
+    border-radius: 0.25em;
+    border-collapse: collapse;
+    margin: 1em;
+  }
+  th {
+    border-bottom: 1px solid #364043;
+    background-color: rgb(175, 126, 240);
+    color: #000000;
+    font-size: 0.85em;
+    font-weight: 600;
+    padding: 0.5em 1em;
+    text-align: left;
+  }
+  td {
+    color: #000000;
+    font-weight: 400;
+    padding: 0.65em 1em;
+  }
+  .disabled td {
+    color: #4F5F64;
+  }
+  
+  tbody tr:hover {
+    background: #e5d2f1;
+  }
