fixed css background

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600");
 
 body {
-    background-image: url(/images/space.png);
+    background-image: url(space.png);
 }
 
 .container {
