--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600");
 
 body {
-    background-image: url(space.png);
+    background-image: url('https://images.pexels.com/photos/956981/milky-way-starry-sky-night-sky-star-956981.jpeg');
 }
 
 .container {
